--- a/src/index.jade
+++ b/src/index.jade
@@ -2,12 +2,8 @@ doctype html
 html(lang="en")
     head
         title= pageTitle
-        script(type='text/javascript').
-            if (foo) {
-                bar(1 + 5)
-            }
     body
-        h1 Jade - node template engine
+        h1 ramlo
         #container.col
             if youAreUsingJade
                 p You are amazing
@@ -18,3 +14,8 @@ html(lang="en")
                 templating language with a
                 strong focus on performance
                 and powerful features.
+
+        h2 resources
+        ul
+            each resource in resources
+                li= resource
