--- a/src/index.jade
+++ b/src/index.jade
@@ -2,20 +2,23 @@ doctype html
 html(lang="en")
     head
         title= pageTitle
+        style
+            include main.css
     body
-        h1 ramlo
-        #container.col
-            if youAreUsingJade
-                p You are amazing
-            else
-                p Get on it!
-            p.
-                Jade is a terse and simple
-                templating language with a
-                strong focus on performance
-                and powerful features.
-
-        h2 resources
-        ul
-            each resource in resources
-                li= resource
+        .container
+            h1 ramlo
+            #container.col
+                if youAreUsingJade
+                    p You are amazing
+                else
+                    p Get on it!
+                p.
+                    Jade is a terse and simple
+                    templating language with a
+                    strong focus on performance
+                    and powerful features.
+                button(class='btn btn-danger') OK
+            h2 resources
+            ul
+                each resource in resources
+                    li= resource
