Update README. Change links to repository in package.json. Output JSON examples in documentation.

--- a/src/index.jade
+++ b/src/index.jade
@@ -67,7 +67,8 @@ html(lang="en")
                                                 if endpoint.example
                                                     p
                                                         strong Example
-                                                    samp= endpoint.example
+                                                    pre
+                                                        code !{endpoint.example}
 
 
 
